--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.33.0",
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^19.1.13",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint": "^9.33.0",
